--- a/src/Components/Preloader.css
+++ b/src/Components/Preloader.css
@@ -23,6 +23,14 @@ body {
   transform: scale(0.75);
 }
 
+@media only screen and (max-width:576px) {
+  .campfire {
+    transform: scale(0.3);
+    margin-left: -35px;
+    margin-top: -70px;
+  }
+}
+
 .log {
   position: absolute;
   width: 238px;
